# tamil-dictionary

./: .gitignore  Cargo.toml  README.md  Rocket.toml
res/scripts/: annotate.js  search_bar.js  search_other.js
res/styles/: annotate.css  index.css  main.css  search.css  search_bar.css
resources/scripts/: search_bar.js  search_other.js
resources/styles/: index.css  main.css  search.css
src/: annotate.rs  debug.rs  dictionary.rs  intern.rs  main.rs  query.rs  refs.rs  search.rs  tamil.rs  web.rs
src/query/: transform.rs
src/search/: debug.rs  tree.rs  word.rs
static/: index.css  main.css  search.css  search_bar.css  search_bar.js
templates/: annotate.html.hbs  error.html.hbs  grammar.html.hbs  index.html.hbs  search.html.hbs
templates/common/: checkbox.html.hbs  definition.html.hbs  definition_paragraph.html.hbs  plural.html.hbs  search_bar.html.hbs
