[package]
name = "tamil_dictionary"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
thiserror = "1.0"
unicode_names2 = "0.4"

[dependencies.rocket]
version = "0.5.0-rc.1"
# features = ["secrets"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]

[dependencies.tokio]
version = "1"
features = ["rt"]
