[package]
name = "tamil_dictionary"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
thiserror = "1.0"
rand = "0.8.4"
regex = "1"
unicode_names2 = "0.5.0"
num_enum = "0.5.3"
seahash = "4.1.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]

[dependencies.tokio]
version = "1"
features = ["rt"]
