[package]
name = "tamil_dictionary"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
thiserror = "1"
rand = "0.8"
regex = "1"
unicode_names2 = "1.2"
num_enum = "0.7"
seahash = "4"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars"]

[dependencies.tokio]
version = "1"
features = ["rt"]
